input openai key on options page, not hardcoded into code

--- a/options.html
+++ b/options.html
@@ -12,8 +12,12 @@
     <div class="container">
         <h1>Settings</h1>
         <form id="settings-form">
+            <label for="openaiApiKey">OpenAI API key:</label></br>
+            <input type="password" id="openaiApiKey" name="openaiApiKey"><br><br>
+
             <label for="tweetPrefix">Tweet prefix:</label></br>
             <textarea style="width:100%" rows="10" type="text" id="tweetPrefix" name="tweetPrefix"></textarea><br><br>
+
             <button type="submit">Save</button>
         </form>
     </div>
